@@ -35,22 +35,22 @@ RSC=rc.exe
 # PROP BASE Output_Dir "autotrace___Win32_Release"
 # PROP BASE Intermediate_Dir "autotrace___Win32_Release"
 # PROP BASE Target_Dir ""
-# PROP Use_MFC 2
+# PROP Use_MFC 0
 # PROP Use_Debug_Libraries 0
 # PROP Output_Dir "autotrace___Win32_Release"
 # PROP Intermediate_Dir "autotrace___Win32_Release"
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "_MBCS" /YX /FD /c
-# ADD CPP /MD /W3 /Gm /GX /Zi /O2 /I "C:\ImageMagick-5.4.0" /D "WIN32" /D "_WINDOWS" /D "_VISUALC_" /D "NeedFunctionPrototypes" /D "HAVE_MAGICK" /D VERSION=\"0.28\" /Fp"C:\autotrace-neu\autotrace___Win32_Release/autotraceexe.pch" /YX /Fo"C:\autotrace-neu\autotrace___Win32_Release/" /Fd"C:\autotrace-neu\autotrace___Win32_Release/" /FD /c
+# ADD CPP /W3 /Gm /GX /Zi /O2 /I "C:\ImageMagick-5.4.0" /I "C:\ming-0.2a" /D "WIN32" /D "_WINDOWS" /D "_VISUALC_" /D "NeedFunctionPrototypes" /D "HAVE_MAGICK" /D VERSION=\"0.29\" /D "HAVE_MING" /D inline=__inline /Fp"C:\autotrace-neu\autotrace___Win32_Release/autotraceexe.pch" /YX /Fo"C:\autotrace-neu\autotrace___Win32_Release/" /Fd"C:\autotrace-neu\autotrace___Win32_Release/" /FD /c
 # ADD BASE RSC /l 0x407 /d "NDEBUG"
-# ADD RSC /l 0x407 /d "NDEBUG" /d "_AFXDLL"
+# ADD RSC /l 0x407 /d "NDEBUG"
 BSC32=bscmake.exe
 # ADD BASE BSC32 /nologo
 # ADD BSC32 /nologo
 LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386
-# ADD LINK32 CORE_RL_magick_.lib /nologo /subsystem:console /machine:I386 /libpath:"C:\ImageMagick-5.4.0\VisualMagick\lib\\"
+# ADD LINK32 CORE_RL_magick_.lib libming.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386 /libpath:"C:\ImageMagick-5.4.0\VisualMagick\lib\\" /libpath:"C:\ming-0.2a\Release"
 # SUBTRACT LINK32 /pdb:none
 
 !ELSEIF  "$(CFG)" == "autotrace - Win32 Debug"
@@ -60,22 +60,22 @@ LINK32=link.exe
 # PROP BASE Output_Dir "autotrace___Win32_Debug"
 # PROP BASE Intermediate_Dir "autotrace___Win32_Debug"
 # PROP BASE Target_Dir ""
-# PROP Use_MFC 2
+# PROP Use_MFC 0
 # PROP Use_Debug_Libraries 1
 # PROP Output_Dir "autotrace___Win32_Debug"
 # PROP Intermediate_Dir "autotrace___Win32_Debug"
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
 # ADD BASE CPP /nologo /W3 /Gm /GX /ZI /Od /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "_MBCS" /YX /FD /GZ /c
-# ADD CPP /nologo /MDd /W3 /Gm /GX /Zi /Od /I "C:\ImageMagick-5.4.0" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D "_VISUALC_" /D "NeedFunctionPrototypes" /D "HAVE_MAGICK" /D VERSION=\"0.28\" /Fp"C:\autotrace-neu\autotrace___Win32_Debug\autotrace.exe.pch" /YX /Fo"C:\autotrace-neu/" /Fd"C:\autotrace-neu/" /FD /c
+# ADD CPP /nologo /W3 /Gm /GX /Zi /Od /I "C:\ImageMagick-5.4.0" /I "C:\ming-0.2a" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D "_VISUALC_" /D "NeedFunctionPrototypes" /D "HAVE_MAGICK" /D VERSION=\"0.29\" /D "HAVE_LIBSWF" /D inline=__inline /Fp"C:\autotrace-neu\autotrace___Win32_Debug\autotrace.exe.pch" /YX /Fo"C:\autotrace-neu/" /Fd"C:\autotrace-neu/" /FD /c
 # ADD BASE RSC /l 0x407 /d "_DEBUG"
-# ADD RSC /l 0x407 /d "_DEBUG" /d "_AFXDLL"
+# ADD RSC /l 0x407 /d "_DEBUG"
 BSC32=bscmake.exe
 # ADD BASE BSC32 /nologo
 # ADD BSC32 /nologo
 LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /debug /machine:I386 /pdbtype:sept
-# ADD LINK32 CORE_DB_magick_.lib /nologo /subsystem:console /debug /machine:I386 /pdbtype:sept /libpath:"C:\ImageMagick-5.4.0\VisualMagick\lib\\"
+# ADD LINK32 CORE_DB_magick_.lib libming.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /debug /machine:I386 /pdbtype:sept /libpath:"C:\ImageMagick-5.4.0\VisualMagick\lib\\" /libpath:"C:\ming-0.2a\Debug"
 
 !ENDIF 
 
@@ -283,7 +283,6 @@ SOURCE=".\output-fig.c"
 
 SOURCE=".\output-fig.h"
 # End Source File
-# Begin Source File
 
 SOURCE=".\output-p2e.c"
 # End Source File
@@ -314,6 +313,14 @@ SOURCE=".\output-svg.c"
 # Begin Source File
 
 SOURCE=".\output-svg.h"
+# End Source File
+# Begin Source File
+
+SOURCE=".\output-swf.c"
+# End Source File
+# Begin Source File
+
+SOURCE=".\output-swf.h"
 # End Source File
 # Begin Source File
 
